fixing photo alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 header{
-  background: url("assets/images/k2co3xb4gry.jpg");
-  
+  background: url("assets/images/k2co3xb4gry.jpg"); 
+  padding-top: 0px
 }
 nav {
 
@@ -17,7 +17,7 @@ body {
   }
   
   * {
-    box-sizing: border-box;
+    box-sizing: border;
   }
   
 
@@ -27,7 +27,6 @@ body {
     max-width: 960px;
     margin: 0 auto;
     clear: both;
-    font-family: 'Coda';
   }
   
   h1,
@@ -38,20 +37,19 @@ body {
   }
   
   p:last-child {
-    margin-bottom: 0;
+    margin-bottom: 2;
   }
   
   h1,
   h2,
   h3 {
-    font-family: "impact ";
+    font-family: "impact";
     font-weight: 700;
     color: #704869;
   }
   
   h1 {
     padding-bottom: 20px;
-    font-family: "impact";
     font-size: 30px;
     line-height: 49px;
     border-bottom: 3px solid #dddddd;
@@ -67,14 +65,14 @@ body {
   #masthead {
     position: fixed;
     z-index: 100;
-    width: 100%;
-    margin: 0 0 10px;
+    width: 99%;
+    margin: 0 0 5px;
     overflow: auto;
     color: #ffffff;
     background: #ffffff;
     border-bottom: 2px solid #cccccc;
     background: url("../images/k2co3xb4gry.jpg");
-    font-family: 'Coda', cursive;
+    padding-top: 0px
   }
   
   #logo {
@@ -82,7 +80,7 @@ body {
     margin-top: 20px;
     width: 250px;
     height: 90px;
-    font-family: 'impact';
+    font-family: Georgia, Times, "Times New Roman", serif;
     font-size: 50px;
     font-weight: 700;
     line-height: 90px;
@@ -90,6 +88,7 @@ body {
     text-align: center;
     text-decoration: none;
     background: rgba(163, 93, 115, 0.40);
+    font-family: "impact"
   }
   
   nav {
@@ -117,14 +116,14 @@ body {
   /* footer */
   
   footer {
-    padding: 30px 0;
+    /* padding: 30px 0; */
     clear: both;
     font-size: 12px;
     color: #ffffff;
     color: #cccccc;
     text-align: center;
     background: #666666;
-    border-top: 8px solid #122240;
+    border-top: 3px solid #122240;
     height: 50px;
     background: url("../images/k2co3xb4gry.jpg")
   }
@@ -147,10 +146,9 @@ body {
     float: left;
     width: 100%;
     max-width: 960px;
-    padding: 30px;
-    margin: 0 0 30px;
+    padding: 20px;
+    margin: 0 0 40px;
     background: #ffffff;
-    border: 1px solid #dddddd;
   }
   
   /* portfolio page */
@@ -167,7 +165,8 @@ body {
   }
   
   .work:nth-child(even) {
-    margin-right: 50px;
+    margin-right: 0px;
+    float: center
   }
   
   .work img {
@@ -190,13 +189,23 @@ body {
     border-bottom: 0;
   }
   */
-  
+  .column {
+    float: center;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
   .auth-image {
-    float: left;
+    float: center;
     width: 200px;
     height: auto;
     margin-top: 10px;
-    margin-right: 25px;
+    margin-right: 15px;
   }
 
   /* contact page */
@@ -221,7 +230,7 @@ body {
   input[type=email],
   textarea {
     height: 35px;
-    padding: 0 10px;
+    padding: 10px 10px;
     font-size: 14px;
     border: 1px solid #d897d5;
   }
@@ -308,7 +317,7 @@ body {
   
   @media screen and (max-width: 320px) {
     body {
-      background-color: #122240;
+      background-color: #9c9c9c;
     }
   
     .wrapper {
@@ -328,7 +337,7 @@ body {
   
   @media screen and (max-width: 168px) {
     body {
-      background-color: #333;
+      background-color: rgb(160, 160, 160);
     }
   
     .wrapper {
@@ -358,8 +367,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -25%);
-  font-size: 40px;
+  font-size: 45px;
   font-family: 'Coda', cursive;
   font: outline;
-  color: rgba(163, 93, 115, .90);
+  color: rgba(150, 61, 89, 0.8);
 }
